--- a/gb/19/2/26/n11073352.md
+++ b/gb/19/2/26/n11073352.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ya2129/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ya2129/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ya2129/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ya2129/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ya2129/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ya2129/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ya2129/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ya2129/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ya2129/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ya2129/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ya2129/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ya2129/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ya2129/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国户籍制度之殇：北京户口VS.移民美国?</h2>
-<a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ya2129/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3c3t179l61pwn.cloudfront.net/I8hrcPCDr"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6></h6>
 <hr>
-	<p>【大纪元2019年02月27日讯】拥有一本<ahref="https://github.com/ya2129/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC%E6%88%B7%E5%8F%A3.md#1">北京户口</a>有多重要？说是“金不换”也不为过。中国作家王朔曾这样描述过北京户口的价值：哪怕做一条狗，也要留在北京；而被称为北漂族的非北京户口、但在北京工作的人们，也在经过仔细研究后猛然发现：总以为移民美国很难，其实和办北京户口相比，美国移民好像都不叫事儿。</p>
+	<p>【大纪元2019年02月27日讯】拥有一本<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC%E6%88%B7%E5%8F%A3.md#1">北京户口</a>有多重要？说是“金不换”也不为过。中国作家王朔曾这样描述过北京户口的价值：哪怕做一条狗，也要留在北京；而被称为北漂族的非北京户口、但在北京工作的人们，也在经过仔细研究后猛然发现：总以为移民美国很难，其实和办北京户口相比，美国移民好像都不叫事儿。</p>
 <div id="storytext">
-<p>最近，一位北大法学博士、中国政法大学教授给两个月大女儿的一封信在网上火了，就是一个印证。这封信说的是“无能的爸爸”在女儿出生快60天后，还没能给女儿办下<ahref="https://github.com/ya2129/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC%E6%88%B7%E5%8F%A3.md#1">北京户口</a>的愤懑和无奈，结论是：“等爸爸有钱了给你办美国户口”。</p>
+<p>最近，一位北大法学博士、中国政法大学教授给两个月大女儿的一封信在网上火了，就是一个印证。这封信说的是“无能的爸爸”在女儿出生快60天后，还没能给女儿办下<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%8C%97%E4%BA%AC%E6%88%B7%E5%8F%A3.md#1">北京户口</a>的愤懑和无奈，结论是：“等爸爸有钱了给你办美国户口”。</p>
 <p>下面摘录这封信的几个段落：</p>
 <p>“亲爱的女儿：</p>
 <p>爸爸是个无能的人。很多事情都办不好，请你原谅。当听说你妈妈怀孕时，我感到意外的惊喜。但随后的事情让我感到，把你带到这个世界真不是一件简单的事情。”</p>
@@ -16,7 +16,7 @@
 <p>旅居美国的中国经济社会学者、著有《现代化陷阱》的何清涟女士在接受我们的采访时表示，她同情这位中国教授的遭遇，想拿中国大城市的户口的确非常难：</p>
 <p>“中国大城市资源丰富，北京有各种各样的政府机构、研究机构和报社，很多学文科的人可以在北京找到工作。”</p>
 <p>但是，在北京有了工作是不是就能上户口，要看其供职单位的性质，何清涟女士说：</p>
-<p>“这位大学教授虽然在北京有工作，但却不是能解决户口问题的工作，他还要面对女儿今后的读书问题。如果是政府机构，当然就能够解决户口问题，否则就需要自己找门路送钱送礼，这对很多人是个折磨。我认识几个在北京已经做得相当不错的名人，有在某网站当高级主管的，或是一家大的NGO的秘书长，也都遇到子女<ahref="https://github.com/ya2129/djy/blob/master/gb/tag/%E4%B8%8A%E5%AD%A6.md#1">上学</a>要办户口的问题。没有户口就得交赞助，或不得不去私立学校、甚至出国。”</p>
+<p>“这位大学教授虽然在北京有工作，但却不是能解决户口问题的工作，他还要面对女儿今后的读书问题。如果是政府机构，当然就能够解决户口问题，否则就需要自己找门路送钱送礼，这对很多人是个折磨。我认识几个在北京已经做得相当不错的名人，有在某网站当高级主管的，或是一家大的NGO的秘书长，也都遇到子女<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%8A%E5%AD%A6.md#1">上学</a>要办户口的问题。没有户口就得交赞助，或不得不去私立学校、甚至出国。”</p>
 <p>取得大城市户口难上加难的原因，是大中城市资源分布不均衡，中小城市就业机会和发展前景远不如大城市，而北京的文化和教育资源最丰富。何清涟女士说：</p>
 <p>“尽管现在是网络时代，但人对社会的了解和对社会便利的享受，非网络部分至少占一半以上。网上的东西都是虚拟的，你可以在网上看资讯和做很多事，但是要真正有自己的朋友圈、人际关系圈、享受社会公共建筑以及福利等，很多东西只有大城市才有。比如在北京，你可以去首都音乐厅听音乐、看来自各国的演出，这在其它中小城市一辈子也见不到。”</p>
 <p>一本北京户口背后，涉及子女入学、购房、买车等诸多权益，成为“北京人”是多少北漂族的梦。</p>
@@ -38,7 +38,7 @@
 <p>北大这位法学博士的遭遇，只是多少人的缩影。胡佳先生列举他的朋友伊力哈木·土赫提为例，伊力哈木在被中共抓捕之前是中央民族大学的教授：</p>
 <p>“伊力哈木自己是北京户口，但他的妻子和两个孩子现在都没有北京户口，还是新疆阿图什的户口。中国的户口制度产生了很多不平等和权力寻租的渠道，而把握户口指标的人可以以此去换钱、搞腐败。如果你没有这些渠道，那我们就看到2017年十一月份，当严冬来临时，北京市长蔡奇曾经驱赶所谓低端人口，数万人被赶到街头流离失所，那些人绝大多数没有北京户口，命运如浮萍。”</p>
 <p>下面再来听一段YOUTUBE上相关媒体的报道视频，说的是北京昌平的一位家长，因为孩子上不了户口无法入学而自焚：</p>
-<p><a width="640" b="480" src=""></a><a href="https://git.io/g"><img width="600" src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ya2129/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/wf6S9NrK7h8?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p><a width="640" b="480" src=""></a><a href="https://d3c3t179l61pwn.cloudfront.net/I8hrcPCDr"><img width="600" src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/wf6S9NrK7h8?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
 <p>这位自焚男子是一位非北京籍贯家长，因为孩子无法入学、走投无路才选择自焚抗议。之后还有许多非北京户籍的家长，到当地政府门前请愿，北京外地儿童入学难问题长期存在。</p>
 <p>何清涟女士说，解决户口问题的关键在于解决资源向大城市集中的问题，但这也不是中国仅有：</p>
 <p>“美国大城市工作机会多，大家都挤到大城市，比如像旧金山，但因为房租和各种生活成本特别高，年收入10万美元在那里是贫困户，人们不得不逃离旧金山。纽约也快要步旧金山的后尘了。”</p>
@@ -58,36 +58,35 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/1/8/2/n115650.md#1">名制片人谈&quot;北漂&quot;艰难生涯: 北京户口就是金钥匙?</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/4/11/2/n706793.md#1">中国招录公务员逾八成限北京户口  引起反弹</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/6/12/1/n1541329.md#1">4万研究生争4千北京户口 挤爆招聘会</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/9/5/24/n2536882.md#1">央视女记者为取得北京户口 遭敛财劫色</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/1/8/2/n115650.md#1">名制片人谈&quot;北漂&quot;艰难生涯: 北京户口就是金钥匙?</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/4/11/2/n706793.md#1">中国招录公务员逾八成限北京户口  引起反弹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/6/12/1/n1541329.md#1">4万研究生争4千北京户口 挤爆招聘会</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/5/24/n2536882.md#1">央视女记者为取得北京户口 遭敛财劫色</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405751.md#1" target="_blank">林辉：燕京大学校长相信中共后的结局</a></li><li><a href="https://github.com/ya2129/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/13/n11519967.md#1" target="_blank">中秋佳节谢师恩 纽约华人的奇妙经历</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/12/n9947938.md#1" target="_blank">张易：批马篇（二）共产主义是贫穷的根源</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/4/n11633370.md#1" target="_blank">一趟印度之行 让她找到生命回归之路</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12122351.md#1">【新闻看点】习世卫讲话遭洗版 4大关北京难过</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12121364.md#1">陈时中办公室曝光！蔡英文：佩服又感动</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/20/n12124357.md#1">回击赵立坚？川普：请跟这笨蛋解释一下</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12122014.md#1">蔡英文520就职演说 传中共四处打探消息</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12121988.md#1">爆大陆副导演潜规则 台亲共女星拒绝后遭暴力</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/18/n12119095.md#1">巨石强森女儿闯进WWE 成史上最年轻签约选手</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/18/n12118146.md#1">吴念真粉专已找回 遗憾贴文“几乎删光”</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/20/n12123097.md#1">杜汶泽恭贺蔡英文总统就职 赞扬民主自由</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/20/n12124356.md#1">梁朝伟房产被强制拍卖 刘嘉玲炒房大赚不够赔</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12120892.md#1">周润发庆65岁 曾说过生日愿望“跑山见神仙”</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/17/n12115416.md#1">【疫情中的纽约人】破解预言的人</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12120346.md#1">曾预言中共肺炎 印度男孩：12月有更大灾难</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/10/7/18/n2969582.md#1">古代邻里故事几则</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/19/n12120654.md#1">英国男子救警察一命 中百万美元乐透</a></li>
-<li><a href="https://github.com/ya2129/djy/blob/master/gb/20/5/14/n12108060.md#1">“朝三暮四”与“朝四暮三” 讲了什么道？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ya2129/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ya2129/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/26/n11073352.htm">中国户籍制度之殇：北京户口VS.移民美国?</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/2/26/n11073352.htm">中国户籍制度之殇：北京户口VS.移民美国?</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ya2129/djy/blob/master/gb/19/2/26/n11073352.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ya2129/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ya2129/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ya2129/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ya2129/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ya2129/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/2/26/n11073352.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
